PN-7993: fix and tests
